kubernetes-manifests/ingress/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backendingress
spec:
  rules:
    - host: api.xeelver.com
      http:
        paths:
          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 80
          - path: /api/booking
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 80
